--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.1.5",
-    "axios": "^1.7.9",
+    "relative-time": "^1.0.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3"
   },
